--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -19,8 +19,24 @@
   }
 }
 
-
 .swiper-slide {
-  background: rgba(255, 255, 255, 0.8) !important; /* Transparent white background */
+  background: rgba(
+    255,
+    255,
+    255,
+    0.8
+  ) !important; /* Transparent white background */
   backdrop-filter: blur(10px) !important; /* Apply a blur effect */
+}
+
+:root {
+  font-size: 12px;
+
+  @media (min-width: them("screens.md")) {
+    font-size: 14px
+  };
+  
+  @media (min-width: them("screens.lg")) {
+    font-size: 16px;
+  }
 }
