--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,14 +21,26 @@
 
 
 
-/* :root {
-  font-size: 24px;
+:root {
+  margin-top: 0;
+  @media (min-width: theme("screens.sm")) {
+    font-size: 12px;
 
-  @media (min-width: them("screens.md")) {
+  };
+
+  @media (min-width: theme("screens.md")) {
     font-size: 14px
   };
   
-  @media (min-width: them("screens.lg")) {
+  @media (min-width: theme("screens.lg")) {
     font-size: 16px;
   }
-} */
+
+  @media (min-width: theme("screens.xl")) {
+    font-size: 16px;
+  }
+
+  @media (min-width: theme("screens.2xl")) {
+    font-size: 16px;
+  }
+}
