--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,15 @@
 
 :root {
   margin-top: 0;
+
+  font-size: 8px;
+
+
+  @media (min-width: theme("screens.ssm")) {
+    font-size: 10px;
+
+  };
+
   @media (min-width: theme("screens.sm")) {
     font-size: 12px;
 
