--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,91 @@
 }
 
 
+/* Swiper style */
+
+.swiper-slide {
+  /* opacity: 0.4  ; */
+  /* animation: fadeLeft 2s ease-out; */
+  filter: blur(2px);
+  z-index: -1;
+}
+
+.swiper-slide.swiper-slide-prev {
+  filter: none; /* Remove blur for visible slides */
+  animation: fadeDirect 1.2s forwards; /* Ensure the animation retains its end state */
+  opacity: 0.5; /* Set initial opacity to 0.5 */
+  /* animation-iteration-count: infinite; */
+  /* animation-direction: alternate; */
+  /* animation-timing-function: linear; */
+  /* opacity: 0.7 !important; */
+}
+
+
+@keyframes fadeDirect {
+  0% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0.4; /* Set the final opacity to 0.4 */
+  }
+}
+
+/* Style for slides that are currently visible */
+.swiper-slide.swiper-slide-visible {
+  opacity: 1;
+  z-index: 10;
+  filter: none; /* Remove blur for visible slides */
+}
+
+/* Style for slides that are fully visible in the viewport */
+.swiper-slide.swiper-slide-visible-active {
+  opacity: 1 ;
+  filter: none; /* Remove blur for visible slides */
+}
+
+/* Style for the currently active slide */
+
+
+/* Style for slides that are both visible and fully visible */
+.swiper-slide.swiper-slide-visible.swiper-slide-fully-visible {
+  opacity: 1;
+  filter: none; /* Remove blur for visible slides */
+}
+
+
+/* Banner style */
+.swiper-pagination-bullet {
+  width: 16px !important;
+  height: 16px !important;
+  margin: 0 5px !important;
+  cursor: pointer !important;
+  border-radius: 50% !important;
+  background-color: #999999 !important; /* Change to your desired color for the active bullet */
+  opacity: 0.9 !important
+
+}
+
+
+
+/* Change the color of the active (selected) bullet */
+.swiper-pagination-bullet-active {
+  background-color: #DB4444 !important; /* Change to your desired color for the active bullet */
+  border: 2px solid white !important; /* Set the border style */
+
+}
+ 
+
+.swiper-pagination-about {
+  position: relative;
+  margin-top: 48px 
+}
+
+
+/* Style Swiper   */
+
 
 :root {
   margin-top: 0;
