--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,13 +20,10 @@
   }
 }
 
-
-
-
 /* Swiper style */
 
 .swiper-slide {
-  opacity: 0.9  ;
+  opacity: 0.9;
   /* animation: fadeLeft 2s ease-out; */
   filter: blur(4px);
   z-index: -1;
@@ -45,7 +42,6 @@
   /* animation-timing-function: linear; */
   /* opacity: 0.7 !important; */
 }
-
 
 @keyframes fadeDirect {
   0% {
@@ -68,10 +64,9 @@
 
 /* Style for slides that are fully visible in the viewport */
 .swiper-slide.swiper-slide-active {
-  opacity: 1 ;
+  opacity: 1;
   filter: none; /* Remove blur for visible slides */
   animation: fadeDirectActive 1.5s forwards; /* Ensure the animation retains its end state */
-
 }
 @keyframes fadeDirectActive {
   0% {
@@ -87,13 +82,11 @@
 
 /* Style for the currently active slide */
 
-
 /* Style for slides that are both visible and fully visible */
 .swiper-slide.swiper-slide-visible.swiper-slide-fully-visible {
   opacity: 1;
   filter: none; /* Remove blur for visible slides */
 }
-
 
 /* Banner style */
 .swiper-pagination-bullet {
@@ -103,34 +96,26 @@
   cursor: pointer !important;
   border-radius: 50% !important;
   background-color: #999999 !important; /* Change to your desired color for the active bullet */
-  opacity: 0.9 !important
-
+  opacity: 0.9 !important;
 }
-
-
 
 /* Change the color of the active (selected) bullet */
 .swiper-pagination-bullet-active {
-  background-color: #DB4444 !important; /* Change to your desired color for the active bullet */
+  background-color: #db4444 !important; /* Change to your desired color for the active bullet */
   border: 2px solid white !important; /* Set the border style */
-
 }
- 
 
 .swiper-pagination-about {
   position: relative;
-  margin-top: 48px 
+  margin-top: 48px;
 }
 
-
 /* Style Swiper   */
-
 
 :root {
   margin-top: 0;
 
   font-size: 12px;
-
 
   /* @media (min-width: theme("screens.ssm")) {
     font-size: 10px;
@@ -139,13 +124,12 @@
 
   @media (min-width: theme("screens.sm")) {
     font-size: 12px;
-
-  };
+  }
 
   @media (min-width: theme("screens.md")) {
-    font-size: 14px
-  };
-  
+    font-size: 14px;
+  }
+
   @media (min-width: theme("screens.lg")) {
     font-size: 16px;
   }
