--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"); */
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
@@ -6,7 +5,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -18,7 +17,7 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 /* Swiper style */
 
@@ -34,24 +33,21 @@
 
 } */
 .swiper-slide.swiper-slide-prev {
-  filter: none; /* Remove blur for visible slides */
-  animation: fadeDirect 1.2s forwards; /* Ensure the animation retains its end state */
-  opacity: 0.5; /* Set initial opacity to 0.5 */
+  filter: none;  
+  animation: fadeDirect 1.2s forwards; 
+  opacity: 0.5;  
   /* animation-iteration-count: infinite; */
   /* animation-direction: alternate; */
   /* animation-timing-function: linear; */
   /* opacity: 0.7 !important; */
 }
 
-@keyframes fadeDirect {
+ @keyframes fadeDirect {
   0% {
     opacity: 1;
   }
-  /* 50% {
-    opacity: 0.8;
-  } */
   100% {
-    opacity: 0.4; /* Set the final opacity to 0.4 */
+    opacity: 0.4; 
   }
 }
 
@@ -63,10 +59,10 @@
 }
 
 /* Style for slides that are fully visible in the viewport */
-.swiper-slide.swiper-slide-active {
+/* .swiper-slide.swiper-slide-active {
   opacity: 1;
-  filter: none; /* Remove blur for visible slides */
-  animation: fadeDirectActive 1.5s forwards; /* Ensure the animation retains its end state */
+  filter: none; 
+  animation: fadeDirectActive 1.5s forwards; 
 }
 @keyframes fadeDirectActive {
   0% {
@@ -76,9 +72,9 @@
     opacity: 0.8;
   }
   100% {
-    opacity: 1; /* Set the final opacity to 0.4 */
+    opacity: 1;
   }
-}
+} */
 
 /* Style for the currently active slide */
 
